Revisi Hover In Some Component Is Not Appropriate

--- a/src/app/layout/components/header-category-button/header-category-button.component.html
+++ b/src/app/layout/components/header-category-button/header-category-button.component.html
@@ -20,7 +20,9 @@
 				<div id="label-kategori">Kategori</div>
 				<div *ngFor="let category of categories">
 					<div [ngClass]="(clickedCategory==category)?'label-kategori-name-red':'label-kategori-name'"
-						(mouseover)='clickedCategory = category'>
+						(mouseover)='clickedCategory = category'
+						(mouseout)='myDrop.close();$event.stopPropagation();'>
+
 						{{category.category_name}}</div>
 				</div>
 			</div>
