--- a/src/app/modules/approval2/components/item-card/item-card.component.html
+++ b/src/app/modules/approval2/components/item-card/item-card.component.html
@@ -1,10 +1,14 @@
 <div id="main-wrapper">
 	<div class="rectangle-87">
 		<div class="d-flex header-wrapper align-items-center">
-			<check-box-two [checked]="item.selected"
-				[allowChanges]="item.enableSelection"
-				(onClickEvent)="handleClickCheckbox($event)"
-				class="check-box-container"></check-box-two>
+			<div class="d-flex justify-content-start">
+				<check-box-two [checked]="item.selected"
+					[allowChanges]="item.enableSelection"
+					(onClickEvent)="handleClickCheckbox($event)"
+					class="check-box-container"
+					[detSupplier]="item.supplier_name"
+					[detDate]="item.submitted_at"></check-box-two>
+			</div>
 			<div class="d-flex flex-grow-1 justify-content-between">
 				<div>
 					<div class="label-gray">Ongkos Kirim</div>
@@ -12,7 +16,8 @@
 				</div>
 				<div>
 					<div class="label-gray">Harga Belanja</div>
-					<div class="label-gray-2">{{item.grand_total|rupiah}}</div>
+					<div class="label-gray-2">{{item.grand_total|rupiah}}
+					</div>
 				</div>
 			</div>
 
