--- a/src/app/shared/components/check-box-two/check-box-two.component.scss
+++ b/src/app/shared/components/check-box-two/check-box-two.component.scss
@@ -9,6 +9,34 @@
 	border: 1px solid $color-primary;
 	border-radius: 50%;
 	box-sizing: border-box;
+	position: relative;float:left;width:10%;
+}
+
+#left-box{
+	position: relative;float:left;width:10%;
+}
+
+#right-box{
+	position: relative;float:left;margin-left:10px;width:70%;
+}
+
+.data-box{
+	float:left;position: relative;width:100%;height:15px;
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 12px;
+	line-height: 18px;
+	display: flex;
+	align-items: center;
+	color: $abu-abu-gelap;
+}
+
+.big{
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 13px;
 }
 
 .custom-checkbox-checked {
@@ -26,4 +54,8 @@
 	height: 12.02px;
 	margin-left: 1px;
 	margin-bottom: 13px;
+}
+
+.tautan{
+	cursor: pointer;
 }
