--- a/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
@@ -30,7 +30,8 @@
 			<div id="horizontal-line"></div>
 			<wsv wide="15px"></wsv>
 
-			<div class="d-flex">
+			<div class="d-flex hasembuh">
+
 				<div class="d-flex flex-grow-1">
 					<input-dropdown [items]="purchasers"
 						[selected]="selectedPurchaser"
@@ -57,6 +58,7 @@
 
 				<reset-filter class="d-flex align-items-center"
 					(click)="reset()"></reset-filter>
+
 			</div>
 
 			<wsv wide="15px"></wsv>
@@ -77,7 +79,7 @@
 
 		</div>
 	</div>
-	<wsv wide="260px"></wsv>
+	<wsv wide="290px"></wsv>
 	<div class="container d-flex">
 		<div id="left-container"
 			[style.height.px]="leftContainerHeight"
