--- a/src/app/modules/approval2/pages/approval-layout/approval-layout.component.scss
+++ b/src/app/modules/approval2/pages/approval-layout/approval-layout.component.scss
@@ -1,76 +1,11 @@
 @import '../../../../../styles/variables/colors';
 @import '../../../../../styles/variables/fonts';
 
-#label1 {
-	font-family: $primary-font;
-	font-weight: bold;
-	font-size: 24px;
-	color: $abu-abu-gelap;
-	margin-top: 9px;
-}
-
-@media only screen and (max-width: 1400px) {
-	.left-container {
-		position: relative;
-		width: 760px;
-		// border: solid blue 1px;
-	}
-
-	#right-container {
-		position: absolute;
-		margin-left:20px;
-		top:110px;
-		left:830px;	
-	}
-
-	.row-item{
-		overflow:scroll; width:100%;
-	}
-
-  }
-
-  @media only screen and (min-width: 1400px) {
-	.left-container {
-		position: relative;
-		width: 1100px;
-		// border: solid yellow 2px;
-	}
-
-	#right-container {
-		position: absolute;
-		margin-left:20px;
-		top:110px;
-		left:1100px;
-	}
-
-	.row-item{
-		overflow:scroll; width:70%;
-	}
-
-  }
-
-
-
 #top-fixed {
 	position: fixed;
-	width: 1100px;
+	width: 1366px;
 	background-color: $main-background;
 	z-index: 1;
-}
-
-#right-fixed {
-	position: fixed;
-}
-
-
-.bg-10 {
-	background-color: $abu-abu-2;
-	width: 100%;
-	z-index: 600;
-}
-#asd {
-	overflow: hidden;
-	/*overflow-y: scroll;*/
 }
 
 #keranjang-label {
@@ -81,26 +16,18 @@
 	margin-top: 25px;
 }
 
-#scrollable-div {
-	position: relative;
-	width: 62%;
-	margin-top: 220px;
-	border: solid yellowgreen 0px;
-	overflow-y: scroll;
-}
-
-#pilihsemua{
+#pilihsemua {
 	font-family: $primary-font;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 14px;
 	line-height: 19px;
 	color: $color-primary;
-	padding-left:15px;
+	padding-left: 15px;
 }
 
-#terpilih{
-	margin-left:550px;
+#terpilih {
+	margin-left: 550px;
 	font-family: $primary-font;
 	font-style: normal;
 	font-weight: bold;
@@ -109,9 +36,19 @@
 	color: $color-primary;
 }
 
+#left-container {
+	overflow: scroll;
+}
 
+#right-container {
+	overflow: scroll;
+}
 /* Hide scrollbar for Chrome, Safari and Opera */
-#scrollable-div::-webkit-scrollbar {
+#left-container::-webkit-scrollbar {
+	display: none;
+}
+
+#right-container::-webkit-scrollbar {
 	display: none;
 }
 
@@ -139,13 +76,35 @@
 	background-color: #e5e5e5;
 }
 
-#horizontal-line {
-	height: 0.5px;
-	width: 100%;
-	background-color: #a9a9a9;
-	opacity: 0.6;
-}
+
 
 .tautan{
 	cursor: pointer;
+}
+
+@media (min-width: 1368px) {
+	#horizontal-line {
+		height: 0.5px;
+		width: 100%;
+		background-color: #a9a9a9;
+		opacity: 0.6;
+	}
+
+	.hasembuh{
+		width:100%;
+	}
+}
+
+@media (max-width: 1366px) {
+	#horizontal-line {
+		height: 0.5px;
+		width: 80%;
+		background-color: #a9a9a9;
+		opacity: 0.6;
+	}
+
+	
+	.hasembuh{
+		width: 80%;
+	}
 }
