--- a/src/app/shared/components/empty-cart/empty-cart.component.scss
+++ b/src/app/shared/components/empty-cart/empty-cart.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../../styles/variables/colors';
-@import '../../../../../styles/variables/fonts';
+@import '../../../../styles/variables/colors';
+@import '../../../../styles/variables/fonts';
 
 .label-cart-empty {
 	font-family: $primary-font;
