--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -37,15 +37,15 @@ button:focus {
 	display: none;
 }
 
-@media (min-width: 1366px) {
+@media (min-width: 1368px) {
 	.container {
 		max-width: 1366px;
 	}
 }
 
-@media (min-width: 600px) {
+@media (max-width: 1366px) {
 	.container {
-		max-width: 1366px;
+		max-width: 1100px;
 	}
 }
 
