--- a/src/app/modules/home/components/catalog-section/catalog-section.component.html
+++ b/src/app/modules/home/components/catalog-section/catalog-section.component.html
@@ -5,7 +5,7 @@
 			(click)="lihatSemua(products[0].category_id,products[0].subcategory_id)">Lihat Semua</div>
 	</div>
 	<div class="white-space"></div>
-	<div class="d-flex">
+	<div class="d-flex pas-catalog">
 		<!-- {{products|json}} -->
 		<div *ngFor="let product of products;  let i=index">
 			<div *ngIf="i<6">
