--- a/src/app/modules/home/components/catalog-section/catalog-section.component.scss
+++ b/src/app/modules/home/components/catalog-section/catalog-section.component.scss
@@ -24,9 +24,31 @@
 	cursor: pointer;
 }
 
-.pas{
-	width: 100%;
-	margin-left:10px;
+
+
+
+@media (min-width: 1368px) {
+	.pas{
+		width: 92%;
+		margin-left:0px;
+	}
+	
+	.pas-catalog{
+		width: 97%;
+		overflow: hidden;
+	}
+}
+
+@media (max-width: 1366px) {
+	.pas{
+		width: 95%;
+		margin-left:0px;
+	}
+	
+	.pas-catalog{
+		width: 97%;
+		overflow: hidden;
+	}
 }
 
 .white-space-18px-horizontal {
