Revisi: [Transaksi] Behavior Tab Is Not Appropriate

--- a/src/app/modules/transaction/components/status-button/status-button.component.html
+++ b/src/app/modules/transaction/components/status-button/status-button.component.html
@@ -1,1 +1,2 @@
-<div [ngClass]="selected == label ? 'status-label-selected' : 'status-label'">{{label.status_name}}</div>
+<div [ngClass]="selected == label.status_code ? 'status-label-selected' : 'status-label'">{{label.status_name}}
+</div>
