--- a/src/app/modules/account/components-info-perusahaan/tambah-alamat-baru-dialog/tambah-alamat-baru-dialog.component.html
+++ b/src/app/modules/account/components-info-perusahaan/tambah-alamat-baru-dialog/tambah-alamat-baru-dialog.component.html
@@ -16,6 +16,7 @@
 
 			<input-dropdown style="width: 298px;"
 				[items]="states"
+				placeholderText="Jenis Perusahaan"
 				(onSelect)="onUserInputJenisPerusahaan($event)"></input-dropdown>
 
 		</div>
@@ -23,8 +24,7 @@
 	</div>
 	<div class="flex-even">
 		<div class="d-flex justify-content-end align-items-center">
-			<label-input label="Nama Perusahaan"
-				[harusDiisi]="true"></label-input>
+			<label-input label="Nama Perusahaan"></label-input>
 			<wsh wide="16px"></wsh>
 			<rounded-input width="298px"
 				placeholderText="Nama Perusahaan"
@@ -39,7 +39,7 @@
 	<label-input label="Detail Alamat"></label-input>
 	<wsh wide="16px"></wsh>
 	<rounded-input width="788px"
-		placeholderText="Detail Alamat"
+		placeholderText="Jl. Boulevard Raya"
 		(onUserInput)="onUserInputDetailPerusahaan($event)"></rounded-input>
 </div>
 
@@ -51,6 +51,7 @@
 			<wsh wide="16px"></wsh>
 			<input-dropdown style="width: 298px;"
 				[items]="provinces"
+				placeholderText="Provinsi"
 				(onSelect)="onProvinceSelected($event)"></input-dropdown>
 		</div>
 
@@ -61,6 +62,7 @@
 			<wsh wide="16px"></wsh>
 			<input-dropdown style="width: 298px;"
 				[items]="districts"
+				placeholderText="Kota/Kabupaten"
 				(onSelect)="onDistrictSelected($event)"></input-dropdown>
 		</div>
 	</div>
@@ -74,6 +76,7 @@
 			<wsh wide="16px"></wsh>
 			<input-dropdown style="width: 298px;"
 				[items]="subdistricts"
+				placeholderText="Kecamatan"
 				(onSelect)="onSubdistrictSelected($event)">
 			</input-dropdown>
 		</div>
@@ -85,6 +88,7 @@
 			<wsh wide="16px"></wsh>
 			<input-dropdown style="width: 298px;"
 				[items]="villages"
+				placeholderText="Kelurahan"
 				(onSelect)="onVillageSelected($event)">
 			</input-dropdown>
 		</div>
@@ -99,6 +103,7 @@
 			<wsh wide="16px"></wsh>
 			<rounded-input width="298px"
 				[disable]="true"
+				placeholderText="Kode Pos"
 				[content]="selectedVillage?.zipcode"></rounded-input>
 		</div>
 
@@ -117,7 +122,7 @@
 			<label-input label="Nama Penerima"></label-input>
 			<wsh wide="16px"></wsh>
 			<rounded-input width="298px"
-				placeholderText="Detail Alamat"
+				placeholderText="Nama Penerima"
 				(onUserInput)="onUserInputNamaPenerima($event)"></rounded-input>
 		</div>
 
@@ -138,7 +143,7 @@
 		[harusDiisi]="true"></label-input>
 	<wsh wide="16px"></wsh>
 	<rounded-input width="788px"
-		placeholderText="Titip Resepsionis"
+		placeholderText="Catatan Pengiriman"
 		(onUserInput)="onUserInputCatatanPengiriman($event)"></rounded-input>
 </div>
 
