--- a/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.scss
+++ b/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.scss
@@ -15,6 +15,20 @@
 	width: 95%;
 }
 
+
+@media (min-width: 1368px) {
+	.pas{
+		max-width:100%;
+	}
+}
+
+@media (max-width: 1366px) {
+	.pas{
+		max-width:80%;
+	}
+}
+
+
 #keranjang-label {
 	font-family: $primary-font;
 	font-weight: bold;
