[Infromasi Perusahaan] Placeholder In Form Tambah Alamat Is Not Appropriate

--- a/src/app/modules/account/components-info-perusahaan/tambah-alamat-baru-dialog/tambah-alamat-baru-dialog.component.html
+++ b/src/app/modules/account/components-info-perusahaan/tambah-alamat-baru-dialog/tambah-alamat-baru-dialog.component.html
@@ -17,6 +17,7 @@
 			<input-dropdown style="width: 298px;"
 				[items]="states"
 				placeholderText="Jenis Perusahaan"
+				idText="jenisperusahaan"
 				(onSelect)="onUserInputJenisPerusahaan($event)"></input-dropdown>
 
 		</div>
