--- a/src/app/shared/components/input-dropdown/input-dropdown.component.scss
+++ b/src/app/shared/components/input-dropdown/input-dropdown.component.scss
@@ -48,6 +48,7 @@
 .dropdown-menu {
 	background-color: transparent;
 	border: none;
+	cursor: pointer;
 }
 
 #style-2::-webkit-scrollbar-track {
@@ -81,10 +82,13 @@
 	margin-right: 12px;
 	padding-left: 8px;
 	padding-right: 8px;
+	cursor: pointer;
 }
+
 .selected {
 	background: $color-primary;
 	border-radius: 20px;
+	font-weight: bold;
 	.item-dropdown-class {
 		color: $putih-tok !important;
 	}
@@ -97,4 +101,16 @@
 	font-size: 14px;
 
 	color: $abu-abu-gelap;
+}
+
+.item-placeholder{
+	position: absolute;
+	width:auto;
+	top:5px;
+	left:15px;
+	font-family: $primary-font;
+	font-style: normal;
+	font-size: 14px;
+	color: $abu-abu-sesuatu;
+	
 }
