item transaction detail

--- a/src/app/modules/transaction-detail/components/status-label/status-label.component.scss
+++ b/src/app/modules/transaction-detail/components/status-label/status-label.component.scss
@@ -29,7 +29,7 @@
 	font-size: 14px;
 	line-height: 19px;
 	color: #ffffff;
-
+	cursor: pointer;
 	padding-left: 10px;
 	padding-right: 10px;
 	padding-top: 4px;
