--- a/src/app/modules/cart2/components/item-card/item-card.component.html
+++ b/src/app/modules/cart2/components/item-card/item-card.component.html
@@ -12,7 +12,7 @@
 				</div>
 				<div>
 					<div class="label-gray">Harga Belanja</div>
-					<div class="label-gray-2">{{item.grand_total|rupiah}}</div>
+					<div class="label-gray-2">{{item.grand_total|number}}</div>
 				</div>
 			</div>
 
