--- a/src/app/modules/transaction-detail/pages/transaction-detail-layout/transaction-detail-layout.component.scss
+++ b/src/app/modules/transaction-detail/pages/transaction-detail-layout/transaction-detail-layout.component.scss
@@ -210,8 +210,8 @@
 	color: #a9a9a9;
 }
 
-.pas{
-	width:95%;
+.pas {
+	width: 95%;
 }
 
 .label-2 {
@@ -249,4 +249,69 @@
 
 .coret {
 	text-decoration-line: line-through;
+}
+
+#keranjang-label {
+	font-family: $secondary-font;
+	font-weight: bolder;
+	font-size: 16px;
+}
+
+#lihat-keranjang-label {
+	font-family: $secondary-font;
+	font-weight: bold;
+	font-size: 12px;
+	width: 130px;
+	height: 32px;
+	background: $color-primary;
+	color: $putih-tok;
+	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+	border-radius: 8px;
+	cursor: pointer;
+	pointer-events: all;
+}
+
+#notif-inner-container {
+	margin-top: 13px;
+	padding-left: 4px;
+	padding-top: 7px;
+	padding-bottom: 10px;
+	padding-right: 12px;
+	width: 350px;
+	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+	border-radius: 8px;
+	background-color: #ffffff;
+}
+
+#notif-img {
+	width: 56px;
+	height: 56px;
+	overflow: hidden;
+}
+
+#wrapper-notification {
+	min-height: 100px;
+	pointer-events: none;
+}
+
+#wrapper-inner-notification {
+	width: 400px;
+	max-height: 345px;
+	background: #fdfdfd;
+	box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+	border-radius: 0px 0px 8px 8px;
+	padding-left: 12px;
+	padding-right: 12px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+
+#rounded-inner-notif {
+	background: #ffffff;
+	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+	border-radius: 8px;
+	padding-left: 4px;
+	padding-right: 12px;
+	padding-top: 10px;
+	padding-bottom: 5px;
 }
