--- a/src/app/modules/transaction/components/receipt-confirmation/receipt-confirmation.component.html
+++ b/src/app/modules/transaction/components/receipt-confirmation/receipt-confirmation.component.html
@@ -4,6 +4,7 @@
 <wsv wide="15px"></wsv>
 <div id="popup-wording">
 	<p><img src="../../../../../assets/image/icons/checklist done.svg"> Konfirmasi terima pemesanan anda</p>
+	<!-- <p>{{modalData | json}}</p> -->
 </div>
 
 <div id="popup-option">
@@ -17,7 +18,7 @@
 	<div id="popup-option-button">
 		<div align="center">
 			<div class="divbutton-right"
-				(click)="tutupModal()">Terima</div>
+				(click)="terima()">Terima</div>
 		</div>
 	</div>
 </div>
