--- a/src/app/modules/request-approval/components/item-card/item-card.component.html
+++ b/src/app/modules/request-approval/components/item-card/item-card.component.html
@@ -54,7 +54,8 @@
 					<div class="d-flex flex-row-reverse">
 						<div id="out-of-stock"
 							class="d-flex justify-content-center align-items-center">
-							{{item.status}}
+							<!-- {{item.status}} -->
+							OUT OF STOCK
 						</div>
 					</div>
 				</div>
