--- a/src/app/layout/components/login-card2/login-card2.component.html
+++ b/src/app/layout/components/login-card2/login-card2.component.html
@@ -1,12 +1,11 @@
 <block-ui>
     <div>
-        <mat-horizontal-stepper [linear]="isLinear"
+        <mat-horizontal-stepper [linear]="true"
             class="rounded-corner"
             #stepper>
 
 
-            <mat-step [stepControl]="firstFormGroup"
-                [completed]="isCompleted">
+            <mat-step [stepControl]="firstFormGroup">
                 <form [formGroup]="firstFormGroup">
                     <div class="d-flex justify-content-center">
                         <img src="../../../../assets/image/icons/login.svg">
@@ -27,17 +26,10 @@
                     </div>
 
 
+                    <get-otp-button [valid]="firstFormGroup.valid"
+                        (getOtpEvent)="sendotp()"></get-otp-button>
 
-
-                    <button id="loginbutton"
-                        [ngClass]="!firstFormGroup.valid ? 'disab' : 'enab'"
-                        mat-button
-                        matStepperNext
-                        (click)="sendotp()">
-                        Get OTP
-                    </button>
-
-                    <div class="p-2 bd-highlight warning">
+                    <div class="warning">
                         {{errlogin}}
                     </div>
 
@@ -47,61 +39,52 @@
 
             <mat-step [stepControl]="secondFormGroup">
                 <form [formGroup]="secondFormGroup">
-                    <div class="p-2 bd-highlight teks"><img src="../../../../assets/image/icons/login-otp.svg"></div>
-                    <div class="p-2 bd-highlight teksbesar">Verifikasi OTP</div>
-                    <div class="p-2 bd-highlight teks">Masukkan Nomor OTP yang sudah dikirim ke <b>{{emailnya}}</b>
+                    <div class="d-flex justify-content-center">
+                        <img src="../../../../assets/image/icons/login-otp.svg">
                     </div>
-                    <div class="p-2 bd-highlight teks">
 
+                    <div class="d-flex justify-content-center teksbesar">
+                        Verifikasi OTP
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        Masukkan Nomor OTP yang sudah dikirim ke
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <b>{{firstFormGroup.value.email}}</b>
+                    </div>
 
-                        <ng-otp-input (onInputChange)="onOtpChange($event,emailnya)"
+                    <div class="d-flex justify-content-center">
+                        <ng-otp-input (onInputChange)="onOtpChange($event)"
                             #ngOtpInput
                             [config]="{length:6}"></ng-otp-input>
-
-
                     </div>
 
-                    <div class="p-2 bd-highlight">
-                        Tidak Terima Nomor OTP? <span class='grey'
-                            [ngStyle]="{'display':display}">Kirim Ulang</span>
-                        <span class='kirimulang'
-                            (click)="sendotp()"
-                            [ngStyle]="{'display':tampil}">Kirim Ulang</span>
-                        &nbsp;
+
+                    <div class="d-flex justify-content-center">
+                        Tidak Terima Nomor OTP?
+                        <wsh wide="10px"></wsh>
+                        <kirim-ulang-button [isCountingDown]="isCountingDown"
+                            (requestOtpEvent)="sendotp()"></kirim-ulang-button>
+                        <wsh wide="10px"></wsh>
                         <countdown [config]="naconfig"
                             (event)="finishCount($event)"
                             [ngStyle]="{'font-weight': '600','font-size':'22px','line-height': '30px','color':'#DB0A2A'}">
                         </countdown>
-
-
                     </div>
 
-                    <div class="p-2 bd-highlight kecil">
-                        <span *ngIf="!isCompleted"
-                            style="color: red;">OTP Expired</span>
-                        <span *ngIf="isCompleted">Harap periksa di inbox / junk email anda</span>
+                    <div class="d-flex justify-content-center kecil">
+                        <span>Harap periksa di inbox / junk email anda</span>
                     </div>
 
-                    <div class="p-2 bd-highlight">
-                        <button mat-button
-                            matStepperNext
-                            id="loginbutton"
-                            (click)="submit()"
-                            [ngClass]="!secondFormGroup.valid ? 'enab' : 'enab'">
-                            Verifikasi dan Proses
-                        </button>
-                        <input type="hidden"
-                            formControlName="password"
-                            ngModel
-                            required>
-                        <input type="hidden"
-                            formControlName="email"
-                            ngModel
-                            required>
+                    <rounded-red-button label="Verifikasi dan Proses"
+                        paddingtop="8px"
+                        paddingbottom="8px"
+                        font="17px"
+                        [matchParentWidth]="true"
+                        (click)="login()"></rounded-red-button>
 
-                    </div>
 
-                    <div class="p-2 bd-highlight warning">
+                    <div class="warning">
                         {{errotp}}
                     </div>
 
